; ModuleID = '/home/carl/AnghaBench/php-src/sapi/cli/extr_php_cli_server.c_sapi_cli_server_read_cookies.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/cli/extr_php_cli_server.c_sapi_cli_server_read_cookies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@server_context = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"cookie\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @sapi_cli_server_read_cookies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sapi_cli_server_read_cookies() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i8*, align 8
  %4 = load i32, i32* @server_context, align 4
  %5 = call %struct.TYPE_5__* @SG(i32 %4)
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %2, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = call i8* @zend_hash_str_find_ptr(i32* %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 6)
  store i8* %9, i8** %3, align 8
  %10 = icmp eq i8* null, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %0
  store i8* null, i8** %1, align 8
  br label %14

12:                                               ; preds = %0
  %13 = load i8*, i8** %3, align 8
  store i8* %13, i8** %1, align 8
  br label %14

14:                                               ; preds = %12, %11
  %15 = load i8*, i8** %1, align 8
  ret i8* %15
}

declare dso_local %struct.TYPE_5__* @SG(i32) #1

declare dso_local i8* @zend_hash_str_find_ptr(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
